syntax = "proto3";
package payment;
option java_package = "com.ferza17.ecommercemicroservicesv2.proto.v1.payment";


// LOCAL IMPORT
import "external/validate/validate.proto";
import "v1/payment/enum.proto";

// PAYMENT REQUEST DEFINITION
message CreatePaymentItemRequest {
  string productId = 1 [(validate.rules).string.ignore_empty = false] ;
  int32 qty = 2 [(validate.rules).int32.gt = 0];
}

message CreatePaymentRequest {
  repeated payment.CreatePaymentItemRequest items = 1 [(validate.rules).repeated.ignore_empty = false] ;
  string provider_id = 2 [(validate.rules).string.ignore_empty = false];
  string shipping_provider_id = 3 [(validate.rules).string.ignore_empty = false];
}

message PaymentOrderDelayedCancelledRequest {
  string id = 1 [(validate.rules).string.ignore_empty = false];
}

message CallBackPaymentRequest {
  string payment_id = 1 [(validate.rules).string.min_len = 1];
  double amount = 2 [(validate.rules).double.gt = 0];
}

message FindPaymentByIdRequest {
  string id = 1 [(validate.rules).string.min_len = 1];
}

message FindPaymentByUserIdAndStatusRequest {
  string user_id = 1 [(validate.rules).string.min_len = 1];
  payment.PaymentStatus status = 2 [(validate.rules).enum.defined_only = true];
}

// PAYMENT PROVIDER REQUEST DEFINITION
message FindPaymentProvidersRequest {
  string name = 1 [(validate.rules).string.min_len = 1];
}

message FindPaymentProviderByIdRequest {
  string id = 1 [(validate.rules).string.min_len = 1];
}